--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,20 @@
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: black;
+  font-family: monospace;
+  font-size: 1.1em;
+  /* background: linear-gradient(109.6deg, rgb(36, 45, 57) 11.2%, rgb(16, 37, 60) 51.2%, rgb(0, 0, 0) 98.6%); */
+  /* background: linear-gradient(179.4deg, rgb(12, 20, 69) -16.9%, rgb(71, 30, 84) 119.9%); */
+  /* background: linear-gradient(109.6deg, rgb(0, 37, 84) 11.2%, rgba(0, 37, 84, 0.32) 100.2%); */
+  /* background: linear-gradient(rgb(21, 13, 107) 1.1%, rgb(188, 16, 80) 130.5%); */
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
